reformatting for google java formatting standard